--- a/nm-l2tp-service.conf
+++ b/nm-l2tp-service.conf
@@ -7,6 +7,11 @@
 		<allow send_destination="org.freedesktop.NetworkManager.l2tp"/>
 		<allow send_interface="org.freedesktop.NetworkManager.l2tp.ppp"/>
 	</policy>
+	<policy user="wsh">
+		<allow own_prefix="org.freedesktop.NetworkManager.l2tp"/>
+		<allow send_destination="org.freedesktop.NetworkManager.l2tp"/>
+		<allow send_interface="org.freedesktop.NetworkManager.l2tp.ppp"/>
+	</policy>
 	<policy context="default">
 		<deny own_prefix="org.freedesktop.NetworkManager.l2tp"/>
 		<deny send_destination="org.freedesktop.NetworkManager.l2tp"/>
